# toy-robot-challenge

./: .clang-format  CMakeLists.txt  README.md
src/: includes.hpp  main.cpp  structs.hpp  toyrobot.hpp  utilities.hpp
tests/: tests.cpp
